--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,10 +13,9 @@
       ],
       "env": {
         "NODE_ENV": "development",
-        "BUILD_ENV": "local"
       },
       "program": "node_modules/.bin/webpack-dev-server",
-      "args": ["--progress", "--env=local", "--colors"],
+      "args": ["--progress", "--env=dev", "--colors"],
     }
   ]
 }
