--- a/package.json
+++ b/package.json
@@ -54,14 +54,21 @@
     
     "//": "ssr",
     "front-matter": "2.1.0",
-    "highlight.js": "9.10.0",
     "html-frontmatter": "1.6.0",
-    "markdown-it": "7.0.1",
-    "markdown-it-replace-link": "1.0.1",
     "object-assign": "4.1.0",
     "parse-filepath": "1.0.1",
     "toml": "2.3.2",
-    "toml-loader": "1.0.0"
+    "toml-loader": "1.0.0",
+    
+    "//": "toc",
+    "github-slugger": "1.3.0",
+    "hast-util-to-html": "7.1.3",
+    "mdast-util-to-hast": "10.2.0",
+    "mdast-util-to-string": "2.0.0",
+    "mdast-util-toc": "5.1.0",
+    "remark": "13.0.0",
+    "remark-parse": "9.0.0",
+    "unist-util-visit": "2.0.3"
   },
   "dependencies": {
     "//": "app",
