--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@types/node": "12",
     "gh-pages": "3.1.0",
     
-    "//": "ssr",
+    "//": "ssg",
     "front-matter": "2.1.0",
     "html-frontmatter": "1.6.0",
     "object-assign": "4.1.0",
