--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "webpack-dev-server": "2.3.0",
     "webpack-merge": "2.6.1",
     "webpack-parallel-uglify-plugin": "0.4.2",
+    "webpack-shell-plugin": "0.5.0",
     
     "//": "publish",
     "@types/gh-pages": "3.2.1",
