--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-
-    "//": "app",
+    "@types/gh-pages": "3.2.1",
+    "@types/node": "12",
     "babel-cli": "6.14.0",
     "babel-core": "6.14.0",
     "babel-loader": "6.2.5",
@@ -31,48 +31,39 @@
     "excerpt-html": "1.2.2",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
+    "front-matter": "2.1.0",
+    "gh-pages": "3.1.0",
+    "github-slugger": "1.3.0",
+    "hast-util-to-html": "7.1.3",
     "history": "2.1.1",
+    "html-frontmatter": "1.6.0",
     "html-webpack-plugin": "2.22.0",
     "img-loader": "2.0.0",
     "jquery": "2.2.3",
     "jquery.cookie": "1.4.1",
+    "mdast-util-to-hast": "10.2.0",
+    "mdast-util-to-string": "2.0.0",
+    "mdast-util-toc": "5.1.0",
+    "object-assign": "4.1.0",
+    "parse-filepath": "1.0.1",
     "react-hot-loader": "4.13.0",
+    "remark": "13.0.0",
+    "remark-parse": "9.0.0",
     "style-loader": "0.13.1",
+    "toml": "2.3.2",
+    "toml-loader": "1.0.0",
     "transfer-webpack-plugin": "0.1.4",
     "ts-node": "10.0.0",
     "typescript": "4.3.2",
+    "unist-util-visit": "2.0.3",
     "urlencode": "1.1.0",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.3.0",
     "webpack-merge": "2.6.1",
     "webpack-parallel-uglify-plugin": "0.4.2",
-    "webpack-shell-plugin": "0.5.0",
-    
-    "//": "publish",
-    "@types/gh-pages": "3.2.1",
-    "@types/node": "12",
-    "gh-pages": "3.1.0",
-    
-    "//": "ssg",
-    "front-matter": "2.1.0",
-    "html-frontmatter": "1.6.0",
-    "object-assign": "4.1.0",
-    "parse-filepath": "1.0.1",
-    "toml": "2.3.2",
-    "toml-loader": "1.0.0",
-    
-    "//": "toc",
-    "github-slugger": "1.3.0",
-    "hast-util-to-html": "7.1.3",
-    "mdast-util-to-hast": "10.2.0",
-    "mdast-util-to-string": "2.0.0",
-    "mdast-util-toc": "5.1.0",
-    "remark": "13.0.0",
-    "remark-parse": "9.0.0",
-    "unist-util-visit": "2.0.3"
+    "webpack-shell-plugin": "0.5.0"
   },
   "dependencies": {
-    "//": "app",
     "immutable": "3.8.2",
     "moment": "2.18.1",
     "prop-types": "15.6.1",
