--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "yarn run start:dev",
     "start:dev": "NODE_ENV=development webpack-dev-server --progress --env dev --colors",
-    "start:prod": "NODE_ENV=production webpack-dev-server --progress --env prod --colors",
+    "start:prod": "yarn build:prod && cd prod && http-server",
     "build": "yarn run build:dev",
     "build:dev": "rm -rf dev && NODE_ENV=development webpack --env dev --progress --color",
     "build:prod": "rm -rf prod && NODE_ENV=production webpack --env prod --progress --color",
@@ -38,6 +38,7 @@
     "history": "2.1.1",
     "html-frontmatter": "1.6.0",
     "html-webpack-plugin": "2.22.0",
+    "http-server": "14.1.1",
     "img-loader": "2.0.0",
     "jquery": "2.2.3",
     "jquery.cookie": "1.4.1",
