--- a/package.json
+++ b/package.json
@@ -6,40 +6,39 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "yarn run start:dev",
-    "start:dev": "NODE_ENV=development webpack-dev-server --progress --env dev --colors",
+    "start:dev": "NODE_ENV=development webpack-dev-server --config config/webpack.dev.js",
     "start:prod": "yarn build:prod && cd prod && http-server",
     "build": "yarn run build:dev",
-    "build:dev": "rm -rf dev && NODE_ENV=development webpack --env dev --progress --color",
-    "build:prod": "rm -rf prod && NODE_ENV=production webpack --env prod --progress --color",
+    "build:dev": "rm -rf dev && NODE_ENV=development webpack --config config/webpack.dev.js",
+    "build:prod": "rm -rf prod && NODE_ENV=production webpack --config config/webpack.prod.js",
     "publish": "yarn run build:prod && ts-node scripts/publish.ts"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "7.18.10",
+    "@babel/core": "7.19.0",
+    "@babel/preset-env": "7.19.0",
+    "@babel/preset-react": "7.18.6",
+    "@babel/preset-typescript": "7.18.6",
     "@types/gh-pages": "3.2.1",
-    "@types/node": "12",
-    "babel-cli": "6.14.0",
-    "babel-core": "6.14.0",
-    "babel-loader": "6.2.5",
-    "babel-plugin-transform-react-inline-elements": "6.8.0",
-    "babel-polyfill": "6.16.0",
-    "babel-preset-es2015": "6.14.0",
-    "babel-preset-react": "6.11.1",
-    "babel-preset-stage-1": "6.13.0",
-    "css-loader": "0.25.0",
+    "@types/node": "16",
+    "babel-loader": "8.2.5",
+    "babel-traverse": "6.26.0",
+    "babylon": "6.18.0",
+    "core-js": "3.25.0",
+    "css-loader": "6.8.1",
+    "css-minimizer-webpack-plugin": "4.0.0",
     "excerpt-html": "1.2.2",
-    "extract-text-webpack-plugin": "2.1.2",
-    "file-loader": "0.11.2",
     "front-matter": "2.1.0",
     "gh-pages": "3.1.0",
     "github-slugger": "1.3.0",
     "hast-util-to-html": "7.1.3",
     "history": "2.1.1",
     "html-frontmatter": "1.6.0",
-    "html-webpack-plugin": "2.22.0",
+    "html-webpack-plugin": "5.5.0",
     "http-server": "14.1.1",
-    "img-loader": "2.0.0",
     "jquery": "2.2.3",
     "jquery.cookie": "1.4.1",
     "mdast-util-to-hast": "10.2.0",
@@ -50,7 +49,7 @@
     "react-hot-loader": "4.13.0",
     "remark": "13.0.0",
     "remark-parse": "9.0.0",
-    "style-loader": "0.13.1",
+    "style-loader": "3.3.3",
     "toml": "2.3.2",
     "toml-loader": "1.0.0",
     "transfer-webpack-plugin": "0.1.4",
@@ -58,11 +57,13 @@
     "typescript": "4.3.2",
     "unist-util-visit": "2.0.3",
     "urlencode": "1.1.0",
-    "webpack": "2.2.1",
-    "webpack-dev-server": "2.3.0",
-    "webpack-merge": "2.6.1",
-    "webpack-parallel-uglify-plugin": "0.4.2",
-    "webpack-shell-plugin": "0.5.0"
+    "webpack": "5.74.0",
+    "webpack-bundle-analyzer": "4.6.1",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.10.1",
+    "webpack-merge": "5.8.0",
+    "webpack-shell-plugin": "0.5.0",
+    "webpack-shell-plugin-next": "2.3.1"
   },
   "dependencies": {
     "immutable": "3.8.2",
